--- a/NGMT/EDAandPackageWork.ipynb
+++ b/NGMT/EDAandPackageWork.ipynb
@@ -20,7 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "from pathlib import Path\n",
-    "from kielmat.datasets import mobilised\n",
+    "from kielmat.datasets import mobilised # new name\n",
     "from kielmat.utils.kielmat_dataclass import KielMATRecording # Import the KielMATRecording class\n",
     "from kielmat.modules.gsd import ParaschivIonescuGaitSequenceDetection # Import the Gait Sequence Detection module"
    ]
