added a cell for data vis

--- a/NGMT/EDAandPackageWork.ipynb
+++ b/NGMT/EDAandPackageWork.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "8a55ac2b",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "9f50ac22",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "1a037f00",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "4   -0.044744   -0.642655   -0.012336  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "7367ee64",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "(56011, 15)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "af89f57e",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "[56011 rows x 15 columns]>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "4e1782ab",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "e1780ed5",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "aeb177a9",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "2      -0.012336  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "f8c3c54f",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
        "4      -0.011450  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "648286d7",
    "metadata": {},
    "outputs": [],
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "5803ce92",
    "metadata": {},
    "outputs": [],
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "fd9ba569",
    "metadata": {},
    "outputs": [
@@ -974,7 +974,7 @@
        "13                 100  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
+   "id": "8ef46b36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Accelerometer_X</th>\n",
+       "      <th>Accelerometer_Y</th>\n",
+       "      <th>Accelerometer_Z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-9.900382</td>\n",
+       "      <td>0.768888</td>\n",
+       "      <td>1.488947</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-9.875965</td>\n",
+       "      <td>0.817546</td>\n",
+       "      <td>1.549903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-9.924262</td>\n",
+       "      <td>0.817896</td>\n",
+       "      <td>1.574577</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-9.900385</td>\n",
+       "      <td>0.902713</td>\n",
+       "      <td>1.611105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-9.888087</td>\n",
+       "      <td>0.988165</td>\n",
+       "      <td>1.575027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56006</th>\n",
+       "      <td>-9.602051</td>\n",
+       "      <td>0.542301</td>\n",
+       "      <td>1.126400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56007</th>\n",
+       "      <td>-9.589844</td>\n",
+       "      <td>0.538983</td>\n",
+       "      <td>1.142321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56008</th>\n",
+       "      <td>-9.598333</td>\n",
+       "      <td>0.540440</td>\n",
+       "      <td>1.114593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56009</th>\n",
+       "      <td>-9.619433</td>\n",
+       "      <td>0.546023</td>\n",
+       "      <td>1.091632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56010</th>\n",
+       "      <td>-9.614262</td>\n",
+       "      <td>0.519747</td>\n",
+       "      <td>1.109009</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>56011 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Accelerometer_X  Accelerometer_Y  Accelerometer_Z\n",
+       "0            -9.900382         0.768888         1.488947\n",
+       "1            -9.875965         0.817546         1.549903\n",
+       "2            -9.924262         0.817896         1.574577\n",
+       "3            -9.900385         0.902713         1.611105\n",
+       "4            -9.888087         0.988165         1.575027\n",
+       "...                ...              ...              ...\n",
+       "56006        -9.602051         0.542301         1.126400\n",
+       "56007        -9.589844         0.538983         1.142321\n",
+       "56008        -9.598333         0.540440         1.114593\n",
+       "56009        -9.619433         0.546023         1.091632\n",
+       "56010        -9.614262         0.519747         1.109009\n",
+       "\n",
+       "[56011 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "e2c471a1",
    "metadata": {},
    "outputs": [
