Added Turn detect and Velocity Conversion

--- a/NGMT/DataWork.ipynb
+++ b/NGMT/DataWork.ipynb
@@ -41,8 +41,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-01T21:52:46.484526Z",
-     "start_time": "2024-08-01T21:52:43.499516Z"
+     "end_time": "2024-08-02T01:05:58.056312Z",
+     "start_time": "2024-08-02T01:05:58.046652Z"
     }
    },
    "cell_type": "code",
@@ -57,7 +57,7 @@
    ],
    "id": "e9ca330a5e8f0e09",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 47
   },
   {
    "metadata": {},
@@ -308,14 +308,14 @@
    "id": "d03c7439",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-02T00:52:53.486494Z",
-     "start_time": "2024-08-02T00:52:53.475418Z"
+     "end_time": "2024-08-02T00:59:17.720179Z",
+     "start_time": "2024-08-02T00:59:17.709023Z"
     }
    },
    "source": [
     "tracked_point = \"lowerBack\"\n",
     "data,channels = import_mobilityLab(file_path, tracked_point)\n",
-    "channels"
+    "data"
    ],
    "outputs": [
     {
@@ -365,12 +365,72 @@
        "</div>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 45
+   "execution_count": 46
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-06T13:07:28.038286Z",
+     "start_time": "2024-09-06T13:07:27.649998Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def read_and_clean_tsv(file_path, new_headers, skiprows=2):\n",
+    "    \"\"\"\n",
+    "    Reads a TSV file into a DataFrame, skips rows, and assigns new headers.\n",
+    "\n",
+    "    Parameters:\n",
+    "        file_path (str): The path to the TSV file.\n",
+    "        new_headers (list): A list of new column headers to assign.\n",
+    "        skiprows (int): The number of rows to skip from the start of the file (default is 2).\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: The cleaned DataFrame.\n",
+    "    \"\"\"\n",
+    "    # Read the TSV file into a DataFrame with specified headers\n",
+    "    df = pd.read_csv(file_path, sep='\\t', skiprows=skiprows, header=1)\n",
+    "\n",
+    "    # Assign the new headers to the DataFrame\n",
+    "    df.columns = new_headers\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "# Example usage\n",
+    "file_path = 'IMUS1.tsv'\n",
+    "new_headers = [\n",
+    "    'Time', 'Accelerometer_X', 'Accelerometer_Y', 'Accelerometer_Z',\n",
+    "    'Gyroscope_X', 'Gyroscope_Y', 'Gyroscope_Z',\n",
+    "    'Magnetometer_X', 'Magnetometer_Y', 'Magnetometer_Z',\n",
+    "    'Barometer', 'Orientation_S', 'Orientation_X', 'Orientation_Y', 'Orientation_Z'\n",
+    "]\n",
+    "\n",
+    "df = read_and_clean_tsv(file_path, new_headers)\n",
+    "\n",
+    "# Display the shape and the first few rows of the DataFrame\n",
+    "df.head(5)"
+   ],
+   "id": "91eefc4b2ec9e3c8",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 30\u001B[0m\n\u001B[0;32m     22\u001B[0m file_path \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mIMUS1.tsv\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[0;32m     23\u001B[0m new_headers \u001B[38;5;241m=\u001B[39m [\n\u001B[0;32m     24\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mTime\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mAccelerometer_X\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mAccelerometer_Y\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mAccelerometer_Z\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m     25\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mGyroscope_X\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mGyroscope_Y\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mGyroscope_Z\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m     26\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mMagnetometer_X\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mMagnetometer_Y\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mMagnetometer_Z\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m     27\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mBarometer\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mOrientation_S\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mOrientation_X\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mOrientation_Y\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mOrientation_Z\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[0;32m     28\u001B[0m ]\n\u001B[1;32m---> 30\u001B[0m df \u001B[38;5;241m=\u001B[39m read_and_clean_tsv(file_path, new_headers)\n\u001B[0;32m     32\u001B[0m \u001B[38;5;66;03m# Display the shape and the first few rows of the DataFrame\u001B[39;00m\n\u001B[0;32m     33\u001B[0m df\u001B[38;5;241m.\u001B[39mhead(\u001B[38;5;241m5\u001B[39m)\n",
+      "Cell \u001B[1;32mIn[1], line 14\u001B[0m, in \u001B[0;36mread_and_clean_tsv\u001B[1;34m(file_path, new_headers, skiprows)\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;124;03mReads a TSV file into a DataFrame, skips rows, and assigns new headers.\u001B[39;00m\n\u001B[0;32m      4\u001B[0m \n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m     11\u001B[0m \u001B[38;5;124;03m    pd.DataFrame: The cleaned DataFrame.\u001B[39;00m\n\u001B[0;32m     12\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m     13\u001B[0m \u001B[38;5;66;03m# Read the TSV file into a DataFrame with specified headers\u001B[39;00m\n\u001B[1;32m---> 14\u001B[0m df \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mread_csv(file_path, sep\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;130;01m\\t\u001B[39;00m\u001B[38;5;124m'\u001B[39m, skiprows\u001B[38;5;241m=\u001B[39mskiprows, header\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m     16\u001B[0m \u001B[38;5;66;03m# Assign the new headers to the DataFrame\u001B[39;00m\n\u001B[0;32m     17\u001B[0m df\u001B[38;5;241m.\u001B[39mcolumns \u001B[38;5;241m=\u001B[39m new_headers\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
   }
  ],
  "metadata": {
